changed image and added aditional css

--- a/metro_scheduler/static/app/js/shared/mainNav/mainNav.html
+++ b/metro_scheduler/static/app/js/shared/mainNav/mainNav.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="navbar-header col-sm-5">
                     <a class="navbar-brand" href="#">
-                        <img class="logo" src="http://engineroom.trackmaven.com/theme/images/logo@2x.png">
+                        <img class="logo" src="/static/app/assets/images/logo1.png">
                     </a>
                     <h1 class="title ">
                         <a class="white-back" href="http://engineroom.trackmaven.com/">Metro Scheduler</a>
